# LearningRecord

./: .gitignore  README.en.md  README.md
ARVR/paper/: doc-paper1-基于增强现实的计算机辅助手术规划与导航系统关键技术及实验研究.md  doc-paper2-基于视觉的增强现实三维注册技术研究.md  基于视觉的增强现实三维注册技术研究_张琼琼.caj
book_reading/: cmake_cookbook_record.md
book_reading/AR and VR using the WebXR API/: ar-and-vr-using-the-webxr-api.md
book_reading/Hololens 2 tutorials/: Part1-Beginner MRTK tutorials.md  readme.md
book_reading/Mixed and augmented reality in medicine/: mixed-augmented-reality-in-medicine-reading-record.md
book_reading/OpenGL programming guide 9th/: chapter1-opengl概述.md  chapter2-着色器基础.md  readme.md
book_reading/Pro ASP_NET core 3/: pro-asp-net-core-3.md
book_reading/book 3D Game Engine Design/: Readme.md  section 2.2-Transformations.md  section 2.3-Cameras.md  section 2.4-Culling and Clipping.md  section 2.5-Rasterizing.md  section 2.6-Vertex Attributes.md  section 3.1-Software Rendering.md  section 4.2-Geometric State.md  (+8 more)
doxygen_manual/: doxygen_chinese_doc.md
geometry-processing/: README.md  comp-triangle-intersection-point-1.md  comp-triangle-intersection-point-2.md  paper-impl-a-fast-triangle-triangle-intersection-test.md  paper-impl-decomposing-concave-polygon-into-convex-polygons .md  paper-impl-fast-software-for-box-intersections.md  paper-impl-simple-and-robust-boolean-operations-for-triangulated-surfaces-2.md  paper-read-a-fast-triangle-triangle-intersection-test.md  paper-read-efficient-booleans-algorithm.md  paper-read-fast-software-for-box-intersections.md  paper-read-fast-software-for-box-intersections.md.md  paper-read-implicit-fairing-of-irregular-meshes-using-diffusion-and-curvature-flow.md  paper-read-simple-and-robust-boolean-opeartions-for-triangulated-surfaces.md  paper-sc-read-fast-software-for-box-intersection.md
geometry-processing/class-digital-geometry-processing/sourcecode/: CMakeLists.txt
geometry-processing/class-digital-geometry-processing/sourcecode/SurfaceMeshProcessing/: SurfaceMeshProcessing.vcxproj
geometry-processing/class-digital-geometry-processing/sourcecode/common/: const_var.h
geometry-processing/class-digital-geometry-processing/sourcecode/smoothing/: CMakeLists.txt
geometry-processing/class-digital-geometry-processing/sourcecode/smoothing/laplacian_smoothing/: CMakeLists.txt  laplacian_smoothing.cpp
geometry-processing/real-time-collision-detection/sourcecode/: CMakeLists.txt
geometry-processing/real-time-collision-detection/sourcecode/imgui_test/: imgui_test.cpp
geometry-processing/real-time-collision-detection/sourcecode/octree_test/: CMakeLists.txt  octree_test.cpp
geometry-processing/sourcecode/: CMakeLists.txt
geometry-processing/sourcecode/cgal_test/: CMakeLists.txt  cgal_test.cpp
geometry-processing/sourcecode/gcomp_test/: CMakeLists.txt  comp_poly_from_tri_seg.h  comp_triangle_inter_point.h  comp_triangle_inter_point_2.h  gcomp_test.cpp
geometry-processing/sourcecode/imgui_test/: CMakeLists.txt
geometry-processing/sourcecode/impl_box_intersection/: CMakeLists.txt  impl_box_intersection.cpp
geometry-processing/sourcecode/mesh_smooth/: CMakeLists.txt  mesh_smooth.cpp
geometry-processing/sourcecode/octree_test/: CMakeLists.txt  geometry_structure.h  octree_test.cpp  triangle_intersection_test.h
geometry-processing/sourcecode/triangle_inter_pair_test/: CMakeLists.txt  triangle_inter_pair_test.cpp
image-rendering/openscenegraph/sourcecode/: CMakeLists.txt  README.md
image-rendering/openscenegraph/sourcecode/osg_test/: CMakeLists.txt
image-rendering/openscenegraph/sourcecode/osgcookbook/: CMakeLists.txt
image-rendering/openscenegraph/sourcecode/osgcookbook/chapter2/ch02_01/: CMakeLists.txt  observer_ptr.cpp
image-rendering/openscenegraph/sourcecode/osgcookbook/chapter2/ch02_03/: CMakeLists.txt  bounding_box.cpp
image-rendering/openscenegraph/sourcecode/osgcookbook/chapter2/ch02_05/: CMakeLists.txt  mirror_scene.cpp
image-rendering/openscenegraph/sourcecode/osgcookbook/chapter2/ch02_07/: CMakeLists.txt  background_image.cpp
image-rendering/openscenegraph/sourcecode/osgcookbook/chapter2/ch02_08/: CMakeLists.txt  billboard_node.cpp
image-rendering/openscenegraph/sourcecode/osgcookbook/chapter2/ch02_10/: CMakeLists.txt  Compass.cpp  Compass.h  main.cpp
image-rendering/openscenegraph/sourcecode/osgcookbook/chapter3/ch03_01/: CMakeLists.txt  create_polygon_with_borderlines.cpp
image-rendering/openscenegraph/sourcecode/osgcookbook/chapter3/ch03_02/: CMakeLists.txt  extruding_a_2d_shape_to_3d.cpp
image-rendering/openscenegraph/sourcecode/osgcookbook/common/: CommonFunctions.h  const_val.h
learncgal/: cgal_bgl_begin.md  cgal_bgl_concepts.md  cgal_bool_operation.md  cgal_m_intersecting_sequences_of_dD_iso_oriented_boxes.md  cgal_pmp_named_parameters.md  cgal_read_designing_a_data_struct_for_polyhedral_surface.md  cgal_sc_intersection_of_triangle_meshes.md
learning_cpp/: cpp_double_string_conver_percision.md  cpp_dynamic_property.md  cpp_stl_alloc.md  cpp_stl_container_storage.md  cpp_stl_uesr_define.md
learnopengl/: learnopengl_reading_record.md
openscenegraph/: introduction.md  osg_contents.md  scenegraph_struct.md
other/: LoadLibrary_with_126_error_code.md  cuda_error_MSB3721.md  git-usage.md  how-to-write-git-commit.md  knowledge-based-development.md  mesh_exporter_importer.md
plan/: README.md
prototype-development/: DRR-implement.md
source_code_reading/: tinyply.md
survey/: ar-hardware-survey.md  hololens-registration-survey.md  paper-read-recent-development-of-ar-in-surgery.md
visual_computing_for_med/: chapter1_introduction.md  pt1_chapter2_acquisition_of_medical_img_data.md.md  pt1_chapter3_introduction_to_medical_visualization_in_clinical_practice.md  pt1_chapter4_image_analysis_for_medical_visualization.md  pt1_chapter5_human-computer_interaction_for_medical_vis.md  pt2_chapter6_surface_rendering.md  pt2_chapter7_direct_volume_visualization.md  pt2_chapter8_advanced_direct_volume_visualization.md  visual Computing for medicine.md
work_helper/: helper_merge_solutions.md  parser_header_files.py
(+128 files in other folders)
